# update-version

./: pyproject.toml
.github/workflows/: update_version.yml
