[tool.poetry]
name = "hoge"
version = "0.1.31"
description = "hogehogehogehogehogehoge"
authors = ["hoge <hoge[at]hoge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
line-length = 88
lint.unfixable = ["F401"]

[tool.mypy]
disallow-untyped-defs = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
